# sip-automation-test-platform

./: .gitignore  README.md  SIPP作为sip引擎的局限性.md  demo_three_tier_architecture.py  pand.md  plan2026-01-08.md  requirements.txt  实现方案.md  概要设计.md  混合架构方案.md  详细设计.md
AutoTestForUG/: NEW_FEATURES.md  README.md  SIP自动化测试配置文件生成系统_详细设计文档.md  __init__.py  analyze_482_detailed.py  analyze_call_issue.py  basic_call_plan.md  basic_sip_call_tester.py  check_indentation.py  cleanup_active_calls.py  complete_register_call_test.py  concurrent_api_test.py  config.ini  config_management.py  create_comprehensive_config.py  create_final_config.py  csv_chinese_compatibility.py  debug_auth_process.py  debug_proxy_auth.py  debug_rf_parser.py  deploy_linux.sh  detailed_debug_rf_parser.py  diagnose_482_issue.py  diagnose_call_670010.py  enhanced_error_handler.py  enhanced_sip_call_tester.py  error_handler.py  example_excel_config_manager.py  example_robot_adapter.py  example_three_tier_usage.py  excel_fill_task_completion_report.md  execute_call_forwarding_test.py  execute_simple_call.py  fill_excel_all_ip_users.py  fill_excel_template.py  fill_excel_template_openpyxl.py  fill_real_excel_template.py  fill_real_excel_template_correct.py  final_verification.py  findings.md  (+60 more)
AutoTestForUG/business_layer/: __init__.py  business_test_suite.py  enhanced_test_scenario.py
AutoTestForUG/business_test/: business_test_suite.py
AutoTestForUG/config/: config.ini  config.py  linux_server_config.ini  test_cases.ini
AutoTestForUG/core/: __init__.py  report_generator.py
AutoTestForUG/docs/: README.md  api_documentation.md  sip_protocol_guide.md  user_manual.md
AutoTestForUG/monitor_client/: performance_monitor.py
AutoTestForUG/rf_adapter/: __init__.py  robot_adapter.py
AutoTestForUG/sip-test-platform/: package-lock.json  package.json
AutoTestForUG/sip_client/: __init__.py  asterisk_sip_client.py  client_manager.py  client_selection_strategy.py  device_controller.py  dialog_state_manager.py  dynamic_header_processor.py  enhanced_socket_client.py  hybrid_client.py  multi_instance_coordinator.py  pj_sip_client.py  sip_client_base.py  sipp_controller.py  sipp_driver_client.py  sipp_result_parser.py  (+4 more)
(+92 files in other folders)
