[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sip-auto-test"
version = "0.1.0"
description = "SIP自动化测试平台 - 基于SIP协议的自动化测试系统，用于测试软交换系统"
readme = "README.md"
authors = [{name = "SIP Test Team"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.25.1",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "configparser>=5.0.0",
    "psutil>=5.8.0",              # 系统性能监控
    "pytest>=6.2.4",
    "pytest-html>=3.1.1",
    "allure-pytest>=2.9.45",
    "openpyxl>=3.0.7",            # Excel文件处理
    "python-docx>=0.8.11",        # Word文档生成
    "matplotlib>=3.4.2",          # 图表绘制
    "seaborn>=0.11.1",            # 数据可视化
    "PyQt5>=5.15.4",              # 高级GUI库
    "scapy>=2.4.5",               # 网络数据包处理
    "pysnmp>=4.4.12",             # SNMP协议支持
    "python-dateutil>=2.8.2",
    "lxml>=4.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "pytest-html>=3.1.1",
    "flake8>=3.8.0",
    "black>=21.0.0",
    "mypy>=0.910",
]


[project.urls]
Homepage = "https://github.com/your-org/sip-auto-test"
Repository = "https://github.com/your-org/sip-auto-test.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["AutoTestForUG*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']